Add: Iconos para los proyectos

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
+    "@iconify/json": "^2.2.213",
+    "@iconify/tailwind": "^1.1.1",
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
