--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-tooltip": "^5.26.4"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.213",
