--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "i18next": "^23.11.5",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
-    "react-router-dom": "^6.23.1"
+    "react-i18next": "^14.1.2",
+    "react-router-dom": "^6.23.1",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.213",
