--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@types/node": "^20.14.9",
     "i18next": "^23.11.5",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
